--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,12 +12,11 @@
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/questions/question.css">
-
     <link rel="stylesheet" type="text/css" href="/stylesheets/questions/question_create.css">
-
     <link rel="stylesheet" type="text/css" href="/stylesheets/navbar/navbar.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/session/login-form.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/session/signup-form.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/splash/splash.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
