--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/questions/question.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/questions/question_create.css">
+      <link rel="stylesheet" type="text/css" href="/stylesheets/questions/question_answers.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/navbar/navbar.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/session/login-form.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/session/signup-form.css">
