--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8" />
 
-    
-
-
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
   integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -36,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Social Q's</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
